# qmodsorter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/core/: CMakeLists.txt  DependencyDatabaseLoader.cpp  DependencyDatabaseLoader.hpp  DependencyGraph.cpp  DependencyGraph.hpp  ModDataLoader.cpp  ModDataLoader.hpp  ModManifest.hpp  ModManifestList.cpp  ModManifestList.hpp  ModNameListModel.hpp  ModsConfig.hpp  ModsConfigLoader.cpp  ModsConfigLoader.hpp  Settings.hpp  SettingsLoader.cpp  SettingsLoader.hpp
src/graph/: CMakeLists.txt  CircularDependencies.hpp  DependencyGraph.cpp  DependencyGraph.hpp  Node.hpp
src/ui/: CMakeLists.txt  CircularDependenciesDialog.cpp  CircularDependenciesDialog.hpp  MainWindow.cpp  MainWindow.hpp  ModDetailsPanel.cpp  ModDetailsPanel.hpp  PathSelectorPanel.cpp  PathSelectorPanel.hpp  main.cpp
tests/: CMakeLists.txt
tests/core/: DependencyGraph.tests.cpp  ModDataLoader.tests.cpp  ModNameListModel.tests.cpp  SettingsLoader.tests.cpp
tests/fixtures/mods/ModWithNewlinesInDesc/About/: About.xml
tests/fixtures/mods/ModWithoutName/About/: About.xml
tests/fixtures/mods/ProperlyMadeMod/About/: About.xml
tests/graph/: DependencyGraph.tests.cpp
